2011-08-30  Christian Bruel  <christian.bruel@st.com>

	* coverage.c (coverage_init): Check flag_branch_probabilities instead of
	flag_profile_use.
	
2011-08-29  Michael Meissner  <meissner@linux.vnet.ibm.com>

	* config/rs6000/rs6000.opt (-msave-toc-indirect): Change default
	to off.  Document switch.
	* doc/invoke.texi (-msave-toc-indirect): Ditto.

2011-08-29  Jakub Jelinek  <jakub@redhat.com>

	* gthr-posix.h (__gthread_active_p): Do not use preprocessor
	conditionals and comments inside macro arguments.

20011-08-29  Artjoms Sinkarovs  <artyom.shinkaroff@gmail.com>
	     Richard Guenther  <rguenther@suse.de>

	* tree.h (constant_boolean_node): Adjust prototype.
	* fold-const.c (fold_convert_loc): Move aggregate conversion
	leeway down.
	(constant_boolean_node): Make value parameter boolean, add
	vector type handling.
	(fold_unary_loc): Use constant_boolean_node.
	(fold_binary_loc): Preserve types properly when folding
	COMPLEX_EXPR <__real x, __imag x>.
	* gimplify.c (gimplify_expr): Handle vector comparison.
	* tree.def (EQ_EXPR, ...): Document behavior on vector typed
	comparison.
	* tree-cfg.c (verify_gimple_comparison): Verify vector typed
	comparisons.

2011-08-29  Jakub Jelinek  <jakub@redhat.com>

	PR middle-end/48722
	* emit-rtl.c (unshare_all_rtl_again): For CALL_INSNs,
	reset_used_flags also in CALL_INSN_FUNCTION_USAGE.
	(verify_rtl_sharing): Likewise and verify_rtx_sharing
	in there too.
	(unshare_all_rtl_in_chain): For CALL_INSNs
	copy_rtx_if_shared also CALL_INSN_FUNCTION_USAGE.

2011-08-29  Richard Guenther  <rguenther@suse.de>

	* gimple-fold.c (gimple_fold_stmt_to_constant_1): Set a location
	on the built ADDR_EXPR.

2011-08-29  Jakub Jelinek  <jakub@redhat.com>

	PR debug/50215
	* var-tracking.c (create_entry_value): Call cselib_lookup_from_insn
	before adding ENTRY_VALUE to val->locs.

2011-08-28  Mikael Pettersson  <mikpe@it.uu.se>

	PR bootstrap/50218
	* tree-ssa-loop-ivopts.c (determine_use_iv_cost_condition): Initialize
	comp.
